--- a/views/partials/_content.html
+++ b/views/partials/_content.html
@@ -11,7 +11,7 @@
     "
   >
     <div
-        id="map-kakao"
+        id="map"
         class="child"
         style="
         position: absolute;
