--- a/views/partials/_content.html
+++ b/views/partials/_content.html
@@ -34,9 +34,9 @@
         touch-action: none;
       "
     ></div>
-    <div style="display: none;">
-      <!-- Popup -->
-      <a id="popup" data-toggle="kt-popover" data-trigger="focus"></a>
+    <div id="popup" class="ol-popup">
+      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
     </div>
   </div>
   <div id="rvWrapper" class="child">
