--- a/views/index.html
+++ b/views/index.html
@@ -141,6 +141,7 @@
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
 <script src="assets/js/maps.bundle.js"></script>
+<script src="assets/js/serv.bundle.js"></script>
 <script>
   $('.navi-link').removeClass('active');
 </script>
