--- a/tools/webpack/webgis/metronic/style.scss
+++ b/tools/webpack/webgis/metronic/style.scss
@@ -152,3 +152,9 @@
 }
 
 ////////////////////////////////////////////////////////////////
+
+// demo5/src/sass/components/_quick-search.scss:18
+
+.input-group-prepend > .input-group-text {
+  padding: 0 0.65rem;
+}
