--- a/tools/webpack/webgis/metronic/style.scss
+++ b/tools/webpack/webgis/metronic/style.scss
@@ -158,3 +158,24 @@
 .input-group-prepend > .input-group-text {
   padding: 0 0.65rem;
 }
+
+////////////////////////////////////////////////////////////////
+
+.outer {
+  width: 2px;
+  height: 100%;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 2px;
+}
+.inner {
+  position: absolute;
+  width:100%;
+  height: 50%;
+  background: #F3F6F9;
+  opacity:0.35;
+  top: 25%;
+  border-radius: 2px;
+  //box-shadow: 0px 0px 30px 20px white;
+}
