--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -125,15 +125,33 @@
         <!--begin::Toggle-->
         <button type="button"
                 class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                id="btn-map-roadview"
-                data-offset="0,10">
-          로드뷰
+                id="btn-map-hybrid">
+          일반 지도
         </button>
 
         <!--end::Toggle-->
       </div>
 
       <!--end::Create-->
+
+      <!--begin::Create-->
+      <div class="topbar-item">
+
+        <!--begin::Toggle-->
+        <button type="button"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                id="btn-map-roadview">
+          거리뷰
+        </button>
+
+        <!--end::Toggle-->
+      </div>
+
+      <!--end::Create-->
+
+      <div class="outer ml-4 mr-2">
+        <div class="inner"></div>
+      </div>
 
       <!--begin::Create-->
       <div class="topbar-item">
