--- a/tools/webpack/webgis/views/layouts/main.html
+++ b/tools/webpack/webgis/views/layouts/main.html
@@ -23,6 +23,13 @@ License: You must have a valid license purchased only from themeforest(the above
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="csrf-token" content="{{_csrfToken}}"/>
 
+  <!--begin::Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap" rel="stylesheet">
+  <!--  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">-->
+  <!--end::Fonts-->
+
   <!--begin::Page Vendors Styles(used by this page)-->
   <link href="assets/css/pages/login/classic/login-4.css" rel="stylesheet" type="text/css" />
   <link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
